force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Charge</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>