force-app/main/default/objects/Expense__c/fields/Concerne__c.field-meta.xml
<CustomField>
    <fullName>Concerne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concerne</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>