force-app/main/default/objects/Expense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaries</fullName>
                <label>Salaires</label>
            </value>
            <value>
                <fullName>Ink</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>