force-app/main/default/objects/Expense__c/recordTypes/Dermato_Expense_RT.recordType-meta.xml
<RecordType>
    <fullName>Dermato_Expense_RT</fullName>
    <active>true</active>
    <label>Dermato Expense RT</label>
</RecordType>