force-app/main/default/objects/Expense__c/validationRules/Is_it_salaries_type_expense.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_it_salaries_type_expense</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Salaries&quot;) &amp;&amp;  Concerne__c  = &quot;&quot;</errorConditionFormula>
    <errorMessage>You must choose a contact for Salaries expense.</errorMessage>
</ValidationRule>